# paper-sage

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml  sample_config.json
.github/workflows/: ci.yml
sample_submissions/: student1.py  student2.rs  student3.txt
src/: config.rs  excel_generator.rs  file_processor.rs  grader.rs  lib.rs  main.rs  models.rs
src/file_processor/: docx_processor.rs  mod.rs  pdf_processor.rs  supported_formats.rs  text_processor.rs
src/grader/: ai_client.rs  grading_engine.rs  mock_grading.rs  mod.rs  prompt_builder.rs  response_parser.rs
test/: sample_config.json
test/sample_submissions/student1/: main.py
test/sample_submissions/student2/: main.rs
test/sample_submissions/student3/: assignment.txt
test/sample_submissions/student4/: README.md
test/sample_submissions/student4/src/main/java/com/example/: Calculator.java  Main.java
