[package]
name = "paper-sage"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# File system traversal
walkdir = "2.4"

# PDF processing
pdf-extract = "0.7"

# Word document processing
docx-rs = "0.4"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Excel file creation
umya-spreadsheet = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# File path handling
path-slash = "0.2"

# Async runtime
futures = "0.3"

# TOML/ENV config loading
config = "0.14"
